<resources>
    <string name="app_name">Found</string>
    <string name="title_activity_login">Login to Found</string>

    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in</string>
    <string name="action_register">Register</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <!-- navdrawer titles -->
    <string name="action_settings">Settings</string>
    <string name="action_account">Account</string>
    <string name="category_account">Account</string>
    <string name="action_signout">Sign out</string>
    <string name="nav_friends">Friends</string>

    <!-- Strings for new post propmpts -->
    <string name="title_post">Say Something</string>
    <string name="prompt_textpost">Something...</string>
    <string name="prompt_linkpost">Share something</string>
    <string name="prompt_imagepost">Show something</string>
    <string name="prompt_post">Post</string>
    <string name="prompt_img">Add image</string>

    <!-- UserView related strings -->
    <string name="title_activity_user_detail">User</string>
    <string name="nav_discover">Find</string>
    <string name="title_activity_scrolling">ScrollingActivity</string>
    <string name="follow">Follow</string>

</resources>
