<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group >
        <item
            android:id="@+id/nav_settings"
            android:icon="@drawable/ic_settings_black_24dp"
            android:title="@string/action_settings" />
        <item
            android:id="@+id/nav_discover"
            android:icon="@drawable/ic_public_black_24dp"
            android:title="@string/nav_discover" />
        <item
            android:id="@+id/nav_friends"
            android:icon="@drawable/ic_group_black_24dp"
            android:title="@string/nav_friends"/>
    </group>

    <item android:title="@string/category_account">
        <menu>
            <item
                android:id="@+id/nav_acct"
                android:icon="@drawable/ic_person_black_24dp"
                android:title="@string/action_account" />
            <item
                android:id="@+id/nav_logout"
                android:icon="@drawable/ic_cancel_black_24dp"
                android:title="@string/action_signout" />
        </menu>
    </item>

</menu>
